--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -2,6 +2,10 @@
 .header_aviso{
     background-color: yellow;
     height: 21px;
+    p{
+        color: black;
+        font-family: monospace;
+    }
 
 }
 .header_aviso_instagram{
