--- a/sass/_seguimiento.scss
+++ b/sass/_seguimiento.scss
@@ -1,7 +1,13 @@
 /*Seguimiento*/
 
-
+.conteiner_ayuda{
+    margin-left: 100px;
+}
 .fuente{
-    font-family: 'Oswald', sans-serif;
+    font-family: monospace;
     font-size: 25px;
+}
+.ejemplo{
+    font-size: 15px;
+    color: grey;
 }
