Aca hice modificaciones a mi trabajo

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -27,52 +27,60 @@ text-align: center;
 }
 
 /*barra de navegacion*/
-.barra{
-    background-color: transparent;
-    float: right;
-    color: white;
-
+    
+.Header_navbar{
+    font-family: sans-serif;
+    width: 100%;
+    background: black;
 }
-    .barra ul{
-        list-style: none;
-        margin: 0;
-        padding: 0%;
-    
-    }
-    .barra ul li{
-        display: inline-block;
-    
-    }
-    .barra ul li a{
-    
-        display: block;
-        padding: 10px; 
-    }
-    .barra ul li a:hover{
-        background-color: teal;
-    
-    
-    }
-    h1 h2{
-        font-style: italic;
-        font-family: 'Otomanopee One', sans-serif;
-    }
-    
-    
+header label{
+    display: none;
+    width: 30px;
+    height: 30px;
+    padding: 10px;
+}
+header label:hover{
+    cursor: pointer; 
+    background: rgba(230, 230, 230, 0.3);   
+}
+#btn-menu{
+    display: block;
+}
+.menu{
+    display: flex;
+    padding: 10px;
+    justify-content: center;
+}
+.menu ul{
+    display: flex;
+    text-align: center;
+    margin: 0;
+    list-style: none;
+    padding: 0; 
+}
+.menu li{
+    padding: 15px;
+    text-decoration: none;
+}
+
+menu li:hover{
+    background:red;
+}
     
     
     
 /* Titulo*/
 
 .Header_Logo{
+    display: flex;
     width: 100%;
-    background-color:black;
-    height: 110px;
+    background-color:red;
+    height: auto;
     border-bottom: 3px solid black;
 }
 .Header_cont_logo{
     width: 350px;
-    height: 99px;
+    height: auto;
     margin-left: 15px;
     background-color:black;
 }
@@ -87,57 +95,10 @@ text-align: center;
     background-color: #EAF1F4 ;
     width: 100%;
 }
-
-    /*COLOR Y FONDO A LAS SECCIONES*/
-*{
-    margin: 0%;
-}
-
-.Header_navbar{
-    font-family: sans-serif;
-    width: 100%;
-    background: black;
-}
-header label{
-    display: block;
-    width: 30px;
-    height: 30px;
-    padding: 10px;
-    border-right: 1px solid #fff;
-}
-header label:hover{
-    cursor: pointer; 
-    background: rgba(0,0,0,.3);   
-}
-#btn-menu{
-    display: none;
-}
-.iconomenu{
-    width: 30px;
-}
-.menu{
-    padding: 10px;
-}
-.menu ul{
-    text-align: center;
-    margin: 0;
-    list-style: none;
-    padding: 0; 
-}
-.menu li{
-    display: inline;
-    padding: 15px;
-    text-decoration: none;
-}
-
-menu li:hover{
-    background:red;
-}
-
 .header_cont_buscador{
-    position: relative;
-    bottom: 60%;
-    left: 25%;
+    margin-top: 30px;
+    margin-left: 80px;
+    width: 100%;
         input{
             padding: 10px;
             color: white;
@@ -147,4 +108,14 @@ menu li:hover{
             border: 2px solid white;
             background-color: black;
         }
+}
+.carrito{
+    img{
+        width: 100px;
+    }
+}
+
+    /*COLOR Y FONDO A LAS SECCIONES*/
+*{
+    margin: 0%;
 }
