--- a/CSS/main.css
+++ b/CSS/main.css
@@ -8,10 +8,6 @@ h2 {
 p {
   color: white; }
 
-* {
-  padding: 0;
-  margin: 0; }
-
 /*TIENDA*/
 .banner {
   display: flex;
@@ -108,40 +104,54 @@ p {
   text-align: center; }
 
 /*barra de navegacion*/
-.barra {
-  background-color: transparent;
-  float: right;
-  color: white; }
+.Header_navbar {
+  font-family: sans-serif;
+  width: 100%;
+  background: black; }
 
-.barra ul {
-  list-style: none;
-  margin: 0;
-  padding: 0%; }
-
-.barra ul li {
-  display: inline-block; }
-
-.barra ul li a {
-  display: block;
+header label {
+  display: none;
+  width: 30px;
+  height: 30px;
   padding: 10px; }
 
-.barra ul li a:hover {
-  background-color: teal; }
+header label:hover {
+  cursor: pointer;
+  background: rgba(230, 230, 230, 0.3); }
 
-h1 h2 {
-  font-style: italic;
-  font-family: 'Otomanopee One', sans-serif; }
+#btn-menu {
+  display: block; }
+
+.menu {
+  display: flex;
+  padding: 10px;
+  justify-content: center; }
+
+.menu ul {
+  display: flex;
+  text-align: center;
+  margin: 0;
+  list-style: none;
+  padding: 0; }
+
+.menu li {
+  padding: 15px;
+  text-decoration: none; }
+
+menu li:hover {
+  background: red; }
 
 /* Titulo*/
 .Header_Logo {
+  display: flex;
   width: 100%;
-  background-color: black;
-  height: 110px;
+  background-color: red;
+  height: auto;
   border-bottom: 3px solid black; }
 
 .Header_cont_logo {
   width: 350px;
-  height: 99px;
+  height: auto;
   margin-left: 15px;
   background-color: black; }
 
@@ -156,53 +166,10 @@ h1 h2 {
   background-color: #EAF1F4;
   width: 100%; }
 
-/*COLOR Y FONDO A LAS SECCIONES*/
-* {
-  margin: 0%; }
-
-.Header_navbar {
-  font-family: sans-serif;
-  width: 100%;
-  background: black; }
-
-header label {
-  display: block;
-  width: 30px;
-  height: 30px;
-  padding: 10px;
-  border-right: 1px solid #fff; }
-
-header label:hover {
-  cursor: pointer;
-  background: rgba(0, 0, 0, 0.3); }
-
-#btn-menu {
-  display: none; }
-
-.iconomenu {
-  width: 30px; }
-
-.menu {
-  padding: 10px; }
-
-.menu ul {
-  text-align: center;
-  margin: 0;
-  list-style: none;
-  padding: 0; }
-
-.menu li {
-  display: inline;
-  padding: 15px;
-  text-decoration: none; }
-
-menu li:hover {
-  background: red; }
-
 .header_cont_buscador {
-  position: relative;
-  bottom: 60%;
-  left: 25%; }
+  margin-top: 30px;
+  margin-left: 80px;
+  width: 100%; }
   .header_cont_buscador input {
     padding: 10px;
     color: white;
@@ -212,141 +179,172 @@ menu li:hover {
     border: 2px solid white;
     background-color: black; }
 
+.carrito img {
+  width: 100px; }
+
+/*COLOR Y FONDO A LAS SECCIONES*/
+* {
+  margin: 0%; }
+
 /*media queries*/
 @media (max-width: 578px) {
-  .Galeria {
-    grid-template-columns: 1fr; }
-  .Galeria_container:nth-child(1) {
-    width: 500px; }
-  .Galeria_container:nth-child(2) {
-    grid-column-start: span 3;
+  header label {
+    display: block; }
+  .menu {
+    position: absolute;
+    width: 100%;
+    background-color: black;
+    margin-left: -100%; }
+  .menu ul {
+    flex-direction: column; }
+  .menu li {
+    border-top: 1px solid black; }
+  #btn-menu:checked ~ .menu {
+    margin-left: 0; }
+  .header_aviso {
     width: 100%;
     height: auto; }
-  .Galeria_container:nth-child(3) {
-    grid-row-start: span 2; }
-  .Galeria_container:nth-child(4) {
-    grid-row: span 2; }
-  .Galeria_container:nth-child(5) {
-    grid-row-start: span 1; }
-  .Galeria_container:nth-child(8) {
-    grid-column-start: span 3;
+    .header_aviso img {
+      display: none; }
+  .header_cont_buscador {
+    transform: translateY(100px); }
+    .header_cont_buscador input {
+      width: 100%; }
+  .Header_logo {
+    background-color: red; }
+  .Header_cont_logo {
+    height: 100%;
+    margin: auto;
+    width: 2000px; }
+    .Header_cont_logo img {
+      width: 100%; } }
+
+@media (max-width: 478px) {
+  .PiePagina {
     height: 400px; }
-  .redSocial {
-    background-color: yellow;
-    height: 21px;
+    .PiePagina h2 {
+      text-align: center; }
+  .conteiner_redes {
+    justify-content: center;
     width: 100%; }
-  .instagram {
-    float: left;
-    width: 20px;
-    margin-right: 1%; }
-  .twitter {
-    float: left;
-    width: 20px;
-    margin-right: 1%; }
-  .facebook {
-    float: left;
-    width: 20px; }
-  .promocion {
-    text-align: center; }
-  .fotoJano {
-    width: 100%;
-    height: auto; }
-  .suscribete {
-    position: relative;
-    top: 80px;
-    right: 15px; } }
-
-.facebook2 {
-  width: 20px; }
-
-.twitter2 {
-  width: 10px; }
-
-@media (min-width: 768px) {
-  .Galeria {
-    grid-template-columns: repeat(4, 1fr); }
-  .Galeria_container:nth-child(2) {
-    grid-column-start: span 3;
-    height: 500px; }
-  .Galeria_container:nth-child(3) {
-    grid-row-start: span 2; }
-  .Galeria_container:nth-child(4) {
-    grid-row: span 2; }
-  .Galeria_container:nth-child(5) {
-    grid-row-start: span 1; }
-  .Galeria_container:nth-child(8) {
-    grid-column-start: span 3;
-    height: 400px; }
-  .redSocial {
+    .conteiner_redes div img {
+      width: 40px; }
+  .PiePagina_Subs_mensaje {
+    margin-left: auto;
+    width: 90%; }
+    .PiePagina_Subs_mensaje form {
+      width: 100%; }
+    .PiePagina_Subs_mensaje input {
+      width: 90%; }
+  .hola {
+    margin: 20px;
+    border-radius: 5px;
     background-color: yellow;
-    height: 21px;
-    width: 100%; }
-  .instagram {
-    float: left;
-    width: 20px;
-    margin-right: 1%; }
-  .twitter {
-    float: left;
-    width: 20px;
-    margin-right: 1%; }
-  .facebook {
-    float: left;
-    width: 20px; }
-  .promocion {
-    text-align: center; }
-  .janoVerde {
-    display: none; } }
-
-@media (min-width: 1024px) {
-  .Galeria {
-    grid-template-columns: repeat(4, 1fr);
     width: 90%;
-    margin: auto; }
-  .Galeria_container:nth-child(1) {
-    grid-row-start: span 3; }
-  .Galeria_container:nth-child(2) {
-    grid-column-start: span 2;
-    height: 500px; }
-  .Galeria_container:nth-child(3) {
-    grid-row-start: span 1; }
-  .Galeria_container:nth-child(4) {
-    grid-row: span 2; }
-  .Galeria_container:nth-child(5) {
-    grid-row-start: span 2; }
-  .Galeria_containerm:nth-child(8) {
-    grid-column-start: span 4;
-    height: 400px; } }
+    text-align: center; }
+  .mensajesFinales {
+    text-align: center; }
+  .derechosdeautor {
+    width: 100%;
+    background-color: whitesmoke; }
+    .derechosdeautor p {
+      color: black;
+      text-align: center; } }
+
+@media (max-width: 800px) {
+  .PiePagina {
+    height: 400px; }
+    .PiePagina h2 {
+      text-align: center; }
+  .conteiner_redes {
+    justify-content: center;
+    width: 100%; }
+    .conteiner_redes div img {
+      width: 40px; }
+  .PiePagina_Subs_mensaje {
+    margin-left: auto;
+    width: 90%; }
+    .PiePagina_Subs_mensaje form {
+      width: 100%; }
+    .PiePagina_Subs_mensaje input {
+      width: 90%; }
+  .hola {
+    margin: 20px;
+    border-radius: 5px;
+    background-color: yellow;
+    width: 90%;
+    text-align: center; }
+  .mensajesFinales {
+    text-align: center; }
+  .derechosdeautor {
+    width: 100%;
+    background-color: whitesmoke; }
+    .derechosdeautor p {
+      color: black;
+      text-align: center; } }
 
 /*pie de pagina*/
 .PiePagina {
   font-family: monospace;
   background: rgba(255, 255, 255, 0.1);
-  border-top: 2px solid white; }
-  .PiePagina img {
-    margin-left: 10px; }
+  border-top: 2px solid white;
+  height: 400px; }
+  .PiePagina h2 {
+    margin: 5px;
+    color: white; }
+  .PiePagina h2 {
+    text-align: center; }
 
-.PiePagina h2 {
-  color: white; }
-
-.PiePagina_icono_facebook2 {
-  width: 80px; }
-
-.PiePagina_icono_instagram2 {
-  width: 80px; }
-
-.PiePagina_icono_twitter2 {
-  width: 80px; }
+.conteiner_redes {
+  margin-bottom: 15px;
+  justify-content: center;
+  width: 100%; }
+  .conteiner_redes div img {
+    width: 40px; }
 
 .PiePagina_Subs_mensaje {
-  color: white;
-  float: right;
-  transform: translate(-130pX, -75px); }
+  margin-left: auto;
+  width: 90%; }
+  .PiePagina_Subs_mensaje form {
+    width: 100%; }
+  .PiePagina_Subs_mensaje input {
+    width: 90%; }
+
+.hola {
+  margin: auto;
+  border-radius: 5px;
+  width: 600vm;
+  text-align: center; }
+  .hola h3 {
+    padding: 5px;
+    border-radius: 5px;
+    margin-left: auto;
+    color: black;
+    background-color: yellow; }
+
+.mensajesFinales {
+  text-align: center; }
+
+.derechosdeautor {
+  width: 100%;
+  background-color: whitesmoke; }
+  .derechosdeautor p {
+    color: black;
+    text-align: center; }
+
+.conteiner_redes {
+  display: flex; }
+  .conteiner_redes img {
+    width: 80px;
+    height: auto; }
+  .conteiner_redes div {
+    margin: 5px; }
+
+.PiePagina_Subs_mensaje {
+  color: white; }
 
 .email {
   width: 80%; }
-
-.PiePagina_Subs_mensaje h3 {
-  width: 100%; }
 
 .car {
   width: 50%;
@@ -460,8 +458,6 @@ span {
   .slider_inicio img {
     margin-left: 500px;
     width: auto;
-    height: auto;
-    max-width: 100%;
     max-height: 400px; }
 
 @keyframes cambio {
@@ -506,7 +502,8 @@ span {
   margin: 0;
   padding: 10px;
   background: black;
-  display: flex;
+  display: grid;
+  grid-template-columns: auto auto auto;
   width: 100%;
   height: auto; }
   .Container_fotos div {
