--- a/CSS/main.css
+++ b/CSS/main.css
@@ -10,10 +10,8 @@ p {
 
 /*TIENDA*/
 .banner {
-  display: flex;
   width: 100%;
   height: 174px;
-  justify-content: center;
   padding: 0px; }
 
 .bannerPromociones {
@@ -25,6 +23,7 @@ p {
 
 .flex-container {
   display: flex;
+  flex-wrap: wrap;
   background-color: whitesmoke;
   padding: 10px;
   justify-content: center; }
@@ -84,7 +83,8 @@ p {
   height: 21px; }
   .header_aviso p {
     color: black;
-    font-family: monospace; }
+    font-family: monospace;
+    font-size: 15px; }
 
 .header_aviso_instagram {
   float: left;
@@ -124,6 +124,7 @@ header label:hover {
 
 .menu {
   display: flex;
+  flex-wrap: wrap;
   padding: 10px;
   justify-content: center; }
 
@@ -144,20 +145,24 @@ menu li:hover {
 /* Titulo*/
 .Header_Logo {
   display: flex;
+  align-items: center;
+  flex-wrap: wrap;
   width: 100%;
-  background-color: red;
-  height: auto;
-  border-bottom: 3px solid black; }
+  background-color: black;
+  height: 150px;
+  border-bottom: 3px solid white; }
+  .Header_Logo div {
+    margin: 10px; }
+
+.carritoCompra {
+  width: 40px; }
 
 .Header_cont_logo {
   width: 350px;
-  height: auto;
-  margin-left: 15px;
   background-color: black; }
 
 .Header_fotoJano {
-  width: 300px;
-  margin: 15px; }
+  width: 300px; }
 
 .Header_titulo_janoDecoraciones {
   display: none; }
@@ -167,13 +172,13 @@ menu li:hover {
   width: 100%; }
 
 .header_cont_buscador {
-  margin-top: 30px;
-  margin-left: 80px;
-  width: 100%; }
+  width: 50%; }
+  .header_cont_buscador form {
+    width: 100%; }
   .header_cont_buscador input {
+    width: 100%;
     padding: 10px;
     color: white;
-    width: 50%;
     text-align: left;
     border-radius: 10px;
     border: 2px solid white;
@@ -188,38 +193,74 @@ menu li:hover {
 
 /*media queries*/
 @media (max-width: 578px) {
-  header label {
-    display: block; }
-  .menu {
-    position: absolute;
-    width: 100%;
-    background-color: black;
-    margin-left: -100%; }
-  .menu ul {
-    flex-direction: column; }
-  .menu li {
-    border-top: 1px solid black; }
-  #btn-menu:checked ~ .menu {
-    margin-left: 0; }
+  .banner {
+    display: none; }
   .header_aviso {
-    width: 100%;
-    height: auto; }
-    .header_aviso img {
+    display: flex;
+    justify-content: space-evenly; }
+    .header_aviso p {
       display: none; }
+    .header_aviso div {
+      margin: 0; }
   .header_cont_buscador {
-    transform: translateY(100px); }
-    .header_cont_buscador input {
-      width: 100%; }
-  .Header_logo {
-    background-color: red; }
+    width: 80%; }
+  .Header_Logo {
+    height: auto;
+    flex-direction: column; }
   .Header_cont_logo {
-    height: 100%;
-    margin: auto;
-    width: 2000px; }
-    .Header_cont_logo img {
-      width: 100%; } }
+    width: 100%; }
+  .Header_fotoJano {
+    margin-left: 70px; }
+  .PiePagina {
+    height: 400px; }
+    .PiePagina h2 {
+      text-align: center; }
+  .conteiner_redes {
+    justify-content: center;
+    width: 100%; }
+    .conteiner_redes div img {
+      width: 40px; }
+  .PiePagina_Subs_mensaje {
+    margin-left: auto;
+    width: 90%; }
+    .PiePagina_Subs_mensaje form {
+      width: 100%; }
+    .PiePagina_Subs_mensaje input {
+      width: 90%; }
+  .hola {
+    margin: 20px;
+    border-radius: 5px;
+    background-color: yellow;
+    width: 90%;
+    text-align: center; }
+  .mensajesFinales {
+    text-align: center; }
+  .derechosdeautor {
+    width: 100%;
+    background-color: whitesmoke; }
+    .derechosdeautor p {
+      color: black;
+      text-align: center; } }
 
 @media (max-width: 478px) {
+  .banner {
+    display: none; }
+  .header_aviso {
+    display: flex;
+    justify-content: space-evenly; }
+    .header_aviso p {
+      display: none; }
+    .header_aviso div {
+      margin: 0; }
+  .header_cont_buscador {
+    width: 80%; }
+  .Header_Logo {
+    height: auto;
+    flex-direction: column; }
+  .Header_cont_logo {
+    width: 100%; }
+  .Header_fotoJano {
+    margin-left: 70px; }
   .PiePagina {
     height: 400px; }
     .PiePagina h2 {
