--- a/sass/_tienda.scss
+++ b/sass/_tienda.scss
@@ -1,10 +1,8 @@
 /*TIENDA*/
 
 .banner{
-    display: flex;
     width: 100%;
     height: 174px ;
-    justify-content: center;
     padding:0px;
 }    
 .bannerPromociones{
@@ -20,6 +18,7 @@
 }
 .flex-container{
     display:flex;
+    flex-wrap: wrap;
     background-color: whitesmoke;
     padding: 10px;
 
