--- a/sass/_inicio.scss
+++ b/sass/_inicio.scss
@@ -1,58 +1,29 @@
 #fondo{
     background: black;
 }
-.slider_inicio{
-    width: 95%;
-    margin: auto;
-    overflow: hidden;
-    height: 400px;
-    object-fit:cover;
-    ul{
-        display: flex;
-        padding: 0;
-        width: 300%;
-        animation: cambio 20s infinite alternate;
-    }
-    li{
-        border-radius: 10px;
-        list-style: none;
-        width: 100%;
-        background-color: black;
-    }
-    img{
-        margin-left: 500px;
-        width:auto;
-        max-height: 400px
-    }
-}
-@keyframes cambio{
-    0%  { margin-left: 0;}
-    20% { margin-left: 0;}
 
-    25% {margin-left: -100%;}
-    45% {margin-left: -100%;}
-
-    50% {margin-left: -200%;}
-    70% {margin-left: -200%;}
-}
 
 .mensajes{
-    font-family: monospace;
-    h3{
-        color:white;
-    }
+
     display:flex;
-    background: rgba(255, 255, 255, 0.1);;
+    flex-wrap: wrap;
+    align-items: center;
+    background: rgba(255, 255, 255, 0.1);
     width: 100%;
-    height: 200px;
-    padding: 60px;
-    margin-top: 30px;
+    height: 100%;
+    margin-top: 5px;
+    padding: 30px;
     justify-content: space-between;
     div{
+        border: 1px solid white;
         padding: 20px;
         background: black;
     }
-    
+    h3{
+        font-family: monospace;
+        color:white;
+        width: 100%;
+    }
 }
 .lonuevo{
     padding: 25px;
