--- a/sass/_mediaqueries.scss
+++ b/sass/_mediaqueries.scss
@@ -1,244 +1,186 @@
 
 /*media queries*/
-@media( max-width: 578px){
-    .banner{
-        display: none;
-    }
-    .header_aviso{
-        display: flex;
-        justify-content: space-evenly;
-        p{
+@media( max-width: 580px){
+
+    .mensajes{
+        div{
+            width: 100%;
+            margin: 10px;
+        }
+        }
+    
+        .banner{
             display: none;
         }
-        div{
-            margin: 0;
-        }
-    }
-    .header_cont_buscador{
-        width: 80%;
-    }
-    .Header_Logo{
-        height: auto;
-        flex-direction: column;
-    }
-    .Header_cont_logo{
-        width: 100%;
-    }
-    
-    .Header_fotoJano{
-        margin-left: 70px;
-    }
-    
-    .menu{
-    
-    }
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    .PiePagina{
-        h2{
-            text-align: center;
-        }
-        height: 400px;
-    }
-        .conteiner_redes{
-            justify-content: center;
-            width: 100%;
-            div{
-                    img{
-                        width: 40px;
-                    }
+        .header_aviso{
+            display: flex;
+            justify-content: space-evenly;
+            p{
+                display: none;
             }
-    
+            div{
+                margin: 0;
+            }
         }
-    .PiePagina_Subs_mensaje{
-        form{
+        .header_cont_buscador{
+            width: 80%;
+        }
+        .Header_Logo{
+            height: auto;
+            flex-direction: column;
+        }
+        .Header_cont_logo{
             width: 100%;
         }
-        margin-left:auto;
-        width: 90%;
-        input{
-            width: 90%;
+        
+        .Header_fotoJano{
+            margin-left: 100px;
         }
-    }
+        
     
-    
-    .hola{
-        margin: 20px;
-        border-radius: 5px;
-        background-color: yellow;
-        width: 90%;
-        text-align: center;
-    }
-    
-    
-    .mensajesFinales{
-        text-align: center;
-    }
-    
-    .derechosdeautor{
-        width: 100%;
-        background-color: whitesmoke;
-        p{
-            color: black;
+        
+        .PiePagina{
+            h2{
+                text-align: center;
+            }
+            height: 400px;
+        }
+            .conteiner_redes{
+                justify-content: center;
+                width: 100%;
+                div{
+                        img{
+                            width: 40px;
+                        }
+                }
+        
+            }
+        .PiePagina_Subs_mensaje{
+            form{
+                width: 100%;
+            }
+            margin-left:auto;
+            width: 90%;
+            input{
+                width: 90%;
+            }
+        }
+        
+        
+        .hola{
+            margin: 20px;
+            border-radius: 5px;
+            background-color: yellow;
+            width: 90%;
             text-align: center;
         }
-    }
-    
-    }
-
-
-// Pie de Pagina
-
-@media( max-width: 478px){
-.banner{
-    display: none;
-}
-.header_aviso{
-    display: flex;
-    justify-content: space-evenly;
-    p{
-        display: none;
-    }
-    div{
-        margin: 0;
-    }
-}
-.header_cont_buscador{
-    width: 80%;
-}
-.Header_Logo{
-    height: auto;
-    flex-direction: column;
-}
-.Header_cont_logo{
-    width: 100%;
-}
-
-.Header_fotoJano{
-    margin-left: 70px;
-}
-
-.menu{
-
-}
-
-
-
-
-
-
-
-
-
-.PiePagina{
-    h2{
-        text-align: center;
-    }
-    height: 400px;
-}
-    .conteiner_redes{
-        justify-content: center;
-        width: 100%;
-        div{
-                img{
-                    width: 40px;
-                }
+        
+        
+        .mensajesFinales{
+            text-align: center;
+        }
+        
+        .derechosdeautor{
+            width: 100%;
+            background-color: whitesmoke;
+            p{
+                color: black;
+                text-align: center;
+            }
+        }
+        
         }
 
-    }
-.PiePagina_Subs_mensaje{
-    form{
-        width: 100%;
-    }
-    margin-left:auto;
-    width: 90%;
-    input{
-        width: 90%;
-    }
-}
 
-
-.hola{
-    margin: 20px;
-    border-radius: 5px;
-    background-color: yellow;
-    width: 90%;
-    text-align: center;
-}
-
-
-.mensajesFinales{
-    text-align: center;
-}
-
-.derechosdeautor{
-    width: 100%;
-    background-color: whitesmoke;
-    p{
-        color: black;
-        text-align: center;
-    }
-}
-
-}
 
 @media (max-width: 800px){
-    .PiePagina{
-        h2{
-            text-align: center;
-        }
-        height: 400px;
-    }
-        .conteiner_redes{
-            justify-content: center;
+
+    .mensajes{
+        div{
             width: 100%;
-            div{
-                    img{
-                        width: 40px;
-                    }
+            margin: 10px;
+        }
+        }
+    
+        .banner{
+            display: none;
+        }
+        .header_aviso{
+            display: flex;
+            justify-content: space-evenly;
+            p{
+                display: none;
             }
-    
+            div{
+                margin: 0;
+            }
         }
-    .PiePagina_Subs_mensaje{
-        form{
+        .header_cont_buscador{
+            width: 80%;
+        }
+        .Header_Logo{
+            height: auto;
+            flex-direction: column;
+        }
+        .Header_cont_logo{
             width: 100%;
         }
-        margin-left:auto;
-        width: 90%;
-        input{
-            width: 90%;
+        
+        .Header_fotoJano{
+            margin-left: 100px;
         }
-    }
+        
     
-    
-    .hola{
-        margin: 20px;
-        border-radius: 5px;
-        background-color: yellow;
-        width: 90%;
-        text-align: center;
-    }
-    
-    
-    .mensajesFinales{
-        text-align: center;
-    }
-    
-    .derechosdeautor{
-        width: 100%;
-        background-color: whitesmoke;
-        p{
-            color: black;
+        
+        .PiePagina{
+            h2{
+                text-align: center;
+            }
+            height: 400px;
+        }
+            .conteiner_redes{
+                justify-content: center;
+                width: 100%;
+                div{
+                        img{
+                            width: 40px;
+                        }
+                }
+        
+            }
+        .PiePagina_Subs_mensaje{
+            form{
+                width: 100%;
+            }
+            margin-left:auto;
+            width: 90%;
+            input{
+                width: 90%;
+            }
+        }
+        
+        
+        .hola{
+            margin: 20px;
+            border-radius: 5px;
+            background-color: yellow;
+            width: 90%;
             text-align: center;
         }
-    }
-    
-}
+        
+        
+        .mensajesFinales{
+            text-align: center;
+        }
+        
+        .derechosdeautor{
+            width: 100%;
+            background-color: whitesmoke;
+            p{
+                color: black;
+                text-align: center;
+            }
+        }
+        
+        }
 
