--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -1,20 +1,36 @@
 /*Contacto*/
-.contacto{
-    background-color: green;
+.mensaje_contacto{
+    width: 80%;
+    margin: auto;
+    border-bottom: 1px solid white;
+    p{
+        text-align: center;
+        font-family: monospace;
     color: white;
+    }
 }
 
-
+.contacto{
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    grid-gap: 20px;
+    justify-items: center;
+}
 
 .formulario{
     font-family: monospace;
-    background-color: #35757D;
+    background-color: black;
+    border: 1px solid white;
     width: 450px;
     margin: 10px;
     padding: 10px 20px;
     box-sizing: border-box;
     border-radius: 7px;
+        label{
+            color: white;
+        }
         H2{
+            border: 1px solid white;
             color: white;
             text-align: center;
             margin: 0;
@@ -40,28 +56,21 @@
     background: whitesmoke;
 }
 
-@media (max-width: 480px){
-    .formulario{
-        width: 100%;
-        margin: 0;
-    }
-    .listaContacto{
-        width: 100%;
-        margin: 0;
-    }
-}
 
 .listaContacto{
     font-family: monospace;
     width: 450px;
-    margin: 10px;
     padding: 10px 20px;
     border-radius: 7px;
-    background-color: #94A3D1;
+    background-color: white;
     
     
     dd{
+        font-weight: bold;
+        color: black;
         text-align: center;
+        font-size: 20px;
+        border: 1px solid black;
     }
     li{
     color:black;
