--- a/sass/_tienda.scss
+++ b/sass/_tienda.scss
@@ -12,33 +12,55 @@
 
 
 }
-.secciones{
-    text-align: center;
 
+.contenedor_tienda{
+    width: 90%;
+    max-width: 1000px;
+    margin: 20px auto;
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: repeat(3,auto);
 }
-.flex-container{
-    display:flex;
-    flex-wrap: wrap;
-    background-color: whitesmoke;
-    padding: 10px;
 
-    justify-content: center;
-
-    
+.contenedor_tienda > div
+.contenedor_tienda .productos
+.contenedor_tienda .filtro
+.contenedor_tienda .categorias{
+    background: #fff;
+    padding: 20px;
+    border-radius: 4px;
 }
-.flex-container div{  
-    background-color:white;
-    border:1px solid black ;
-    margin:10px;
-    
 
+.contenedor_tienda .categorias{
+    ul{
+        dd{
+            font-weight: bold ;
+        }
+        list-style: none;
+        font-family: monospace;
+        li{
+            a{
+            color: whitesmoke; 
+            }
+        }
+    }
+    color: whitesmoke;
+    background: rgba(230, 230, 230, 0.3);   ;
 }
+
+
+
+
+
+
+
+
+
+
+
 .producto1{
     width: 300px;
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
 
 }
 
@@ -46,46 +68,5 @@
     border: 5px solid black;
 }
 
-#tiendaCategorias{
-    background-color: black;
-}
-#tiendaCategorias ul{
-    list-style: none;
-    margin: 0;
-    padding: 0%;
 
-}
-#tiendaCategorias ul li{
-    display: inline-block;
-
-}
-#tiendaCategorias ul li a{
-
-    color: white;
-    text-decoration: none;
-    display: block;
-    padding: 20px 70px; 
-}
-#tiendaCategorias ul li a:hover{
-    background-color: teal;
-
-
-}
-
-
-.carritoTienda{
-    width: 25px;
-    position: relative;
-    left: 40px;
-}
-.finalizarCompra{
-    float: right;
-    margin-right: 50px;
-    position: relative;
-    bottom: 40px;
-}
-
-.filtro{
-    background-color: whitesmoke
-}
 
