--- a/CSS/main.css
+++ b/CSS/main.css
@@ -232,7 +232,27 @@ menu li:hover {
   .seguimiento_oca {
     font-size: 15px; }
   .seguimiento_jano {
-    font-size: 15px; } }
+    font-size: 15px; }
+  /* CONTENEDOR TIENDA */
+  .contenedor_tienda {
+    grid-template-columns: auto auto; }
+  /* categorias */
+  .contenedor_tienda .categorias {
+    grid-column-start: 1;
+    grid-column-end: -1;
+    grid-row-start: 1;
+    grid-row-end: 2; }
+  .contenedor_tienda .categorias li {
+    display: inline; }
+  /* filtro */
+  .contenedor_tienda .filtro {
+    grid-column-start: 1;
+    grid-column-end: -1; }
+  .contenedor_tienda .filtro input {
+    width: 100%; }
+  /* Productos */
+  .producto1 {
+    width: 100%; } }
 
 @media (max-width: 800px) {
   .mensajes div {
